Fixed orientation Title and Spacing

--- a/_sass/partials/_home.scss
+++ b/_sass/partials/_home.scss
@@ -1,25 +1,17 @@
 @include breakpoint($b_initial) {
 
-  // .landscape {
-  //   .landingSection {
-  //     align-content: inherit;
-  //
-  //     &_top {
-  //       width: 100%;
-  //       transform: rotate(0deg);
-  //       position: inherit;
-  //       justify-content: flex-start;
-  //
-  //       &_title {
-  //         margin-left: 0px;
-  //
-  //         br {
-  //           display: block;
-  //         }
-  //       }
-  //     }
-  //   }
-  // }
+  .landscape {
+    .landingSection {
+      align-content: inherit;
+
+      &_top {
+        width: 100%;
+        transform: rotate(0deg);
+        position: inherit;
+        justify-content: flex-start;
+      }
+    }
+  }
 
   .landingSection {
     $margin: calc(2 * #{$d_scale_s});
@@ -35,18 +27,9 @@
       transform: rotate(270deg);
       //right: calc(100% - calc(#{$d_scale_s} + 10px));
       right: calc(100% - 10px);
-      // right: calc(100% - #{$d_scale_s});
       position: absolute;
       top: $d_scale_s;
       justify-content: flex-end;
-
-      &_title {
-        display: inline-block;
-
-        br {
-          display: none;
-        }
-      }
     }
 
 
@@ -97,13 +80,9 @@
       position: inherit;
       justify-content: flex-start;
 
-      &_title {
-        margin-left: 0px;
-
-        br {
-          display: block;
-        }
-      }
+      // &_title {
+      //   margin-left: 0px;
+      // }
     }
   }
 
